Change input styling. Change data entry into view (using element nodes). Change Add tooltip. Allow article link on click.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 </head>
 
 <body>
+
+
+  <div style="position:fixed">
+    <img src="img/question.png"  title="The Wikipedia Viewer allows users to search Wikipedia"
+    style="cursor:pointer"id="question" width="20" height="20"/>
+
+  </div>
     <div class="queryer">
 
 
@@ -29,7 +36,7 @@
 
 
             <form id="form">
-              <input id="query" type="text" placeholder="Search Wikipedia...."></input>
+              <input id="query"  style="font-size:24px; font-family: width:300px;line-height:35px; "type="text" placeholder="Search Wikipedia...." ></input>
               <input type="button"  value="Submit" id="submit"></input>
             </form>
           </div>
@@ -48,7 +55,7 @@
     <section >
 
       <div class="container" id="results" style="display:none;">
-      <h3>Results:</h3>
+  
     </div>
     </section>
   </div>
